UtahLiveDataTest/src/objects/KeyOutcome__c.object
<CustomObject>
    <description>[Business] Defines the list of the key outcomes based on key performance Category and Key Performance Indicator</description>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Award is linked to Performance Outcomes</description>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>KeyOutcomes</relationshipLabel>
        <relationshipName>KeyOutcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion__c</fullName>
        <formula>Actual__c / Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HideEditAndDelete__c</fullName>
        <formula>IF(Award__c!=null,Award__r.HideNewBtn__c,Award__r.HideNewBtn__c)</formula>
        <label>HideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>OR(AND(Program__c!=null, NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))), 
AND(Award__c!=null, NOT(ISPICKVAL(Award__r.Status__c , &apos;Created&apos;))), 
AND(ServiceArea__c!=null, ServiceArea__r.HideEditDelete__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDeleteWeike__c</fullName>
        <formula>NOT(ISPICKVAL(Award__r.Status__c , &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDeleteWeike</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideServiceAreaEditDelete__c</fullName>
        <formula>ServiceArea__r.HideEditDelete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideServiceAreaEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KeyPerformanceCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Performance Category</label>
        <referenceTo>KeyPerformanceCategory__c</referenceTo>
        <relationshipLabel>KeyOutcomes</relationshipLabel>
        <relationshipName>KeyOutcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyPerformanceIndicator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>KPI Type</description>
        <label>Type</label>
        <referenceTo>KeyPerformanceIndicator__c</referenceTo>
        <relationshipLabel>KeyOutcomes</relationshipLabel>
        <relationshipName>KeyOutcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyPerformanceSubCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Performance Sub-Category</label>
        <referenceTo>KeyPerformanceCategory__c</referenceTo>
        <relationshipLabel>KeyOutcomes (Key Performance Sub-Category)</relationshipLabel>
        <relationshipName>KeyOutcomes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyPerformanceSubIndicator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Title</label>
        <referenceTo>KeyPerformanceIndicator__c</referenceTo>
        <relationshipLabel>KeyOutcomes (Key Performance Sub-Indicator)</relationshipLabel>
        <relationshipName>KeyOutcomes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increase</fullName>
                    <default>true</default>
                    <label>Increase</label>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>KeyOutcomes</relationshipLabel>
        <relationshipName>KeyOutcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>KeyOutcomes</relationshipLabel>
        <relationshipName>KeyOutcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acres (Ac)</fullName>
                </value>
                <value>
                    <fullName>Distance (Miles)</fullName>
                </value>
                <value>
                    <fullName>Dollar ($)</fullName>
                </value>
                <value>
                    <fullName>Score</fullName>
                </value>
                <value>
                    <fullName>Gallons (gal)</fullName>
                </value>
                <value>
                    <fullName>Number(#)</fullName>
                </value>
                <value>
                    <fullName>Percentage(%)</fullName>
                </value>
                <value>
                    <fullName>Speed (MPH)</fullName>
                </value>
                <value>
                    <fullName>Time (Hours)</fullName>
                </value>
                <value>
                    <fullName>Walk Score</fullName>
                </value>
                <value>
                    <fullName>Weight (Tons)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Key Outcome</label>
    <listViews>
        <fullName>All</fullName>
        <columns>KeyPerformanceSubIndicator__c</columns>
        <columns>KeyPerformanceIndicator__c</columns>
        <columns>Program__c</columns>
        <columns>Award__c</columns>
        <columns>Target__c</columns>
        <columns>ServiceArea__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KOUT-{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KeyOutcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>